deployment/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-crud-ing
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-nginx
spec:
  tls:
  - hosts:
      - api.go.mezi.dev
    secretName: letsencrypt-go-crud
  rules:
  - host: api.go.mezi.dev
    http:
     paths:
     - path: /
       backend:
         service:
           name: go-crud-svc
           port:
             number: 8080
       pathType: ImplementationSpecific
